--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,48 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is the competive workout app Workout-Wars. It can be found at http://www.workout-wars.com
 
-Things you may want to cover:
+Application Setup:
 
 * Ruby version
+  2.0.0
 
 * System dependencies
 
 * Configuration
+    Sign in with Facebook cannot be used locally
 
 * Database creation
+  Create ROLE workoutwars in PostgreSQL by
+    psql -d template1
+    CREATE ROLE workoutwars WITH LOGIN PASSWORD 'uofucs';
+    ALTER ROLE workoutwars WITH SUPERUSER;
+    \q to exit
+  then run:  
+    rake db:create:all  
 
 * Database initialization
+    rake db:migrate
+    rake db:seed
 
 * How to run the test suite
+    rake db:test:prepare
+    bundle exec rspec spec/
+    cucumber features/
+* API
+  The session API can be found at /api/v1/sign_in etc..
+  To test with curl 
+    curl -X POST http://localhost:3000/api/v1/users/sign_in.json --data "email=email@example&password=password"
+    curl GET -X DELETE http://localhost:3000/api/v1/users/sign_out.json --data "auth_token=GfRXCyV6BG8iiDUAuNzk"
 
 * Services (job queues, cache servers, search engines, etc.)
 
 * Deployment instructions
+  Add heroku remote to git
+    git remote add heroku git@heroku.com:workoutwars.git 
+  before pushing run
+    rake assets:precompile
+  commit changes to github then run 
+    git push heroku
 
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
